<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/grid_0"
    app:cardCornerRadius="@dimen/grid_32">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/grid_8">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/custom_dialog_fragment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/custom_dialog_fragment_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_8"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_dialog_fragment_header"
            tools:text="@string/message_permission" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom_dialog_fragment_negative_button"
            android:layout_width="@dimen/grid_100"
            android:layout_height="@dimen/grid_48"
            android:layout_marginTop="@dimen/grid_8"
            android:background="@android:color/transparent"
            android:elevation="@dimen/grid_0"
            android:text="@string/button_str_disagree"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_dialog_fragment_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom_dialog_fragment_positive_button"
            android:layout_width="@dimen/grid_100"
            android:layout_height="@dimen/grid_48"
            android:layout_marginTop="@dimen/grid_8"
            android:background="@android:color/transparent"
            android:elevation="@dimen/grid_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/button_str_agree"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/custom_dialog_fragment_content" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/grid_2"
            android:layout_height="@dimen/grid_16"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/custom_dialog_fragment_positive_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/custom_dialog_fragment_positive_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>