<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locations_container"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/grid_4"
    app:cardBackgroundColor="?attr/colorOnPrimary"
    app:cardCornerRadius="@dimen/card_view_corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_8">


            <TextView
                android:id="@+id/locations_item_view_current_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locations_item_view_region"
                tools:text="155\u00B0" />

            <TextView
                android:id="@+id/locations_item_view_feels_like_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/locations_item_view_region"
                tools:text="Feels like 25\u00B0" />

            <ImageView
                android:id="@+id/locations_item_view_humidity_icon"
                android:layout_width="@dimen/grid_20"
                android:layout_height="@dimen/grid_20"
                android:contentDescription="@string/humidity_icon_desc"
                android:src="@drawable/ic_humidity"
                app:layout_constraintBottom_toBottomOf="@id/locations_item_view_chance_of_rain"
                app:layout_constraintEnd_toStartOf="@id/locations_item_view_chance_of_rain"
                app:layout_constraintStart_toStartOf="@id/locations_item_view_feels_like_temp"
                app:layout_constraintTop_toTopOf="@id/locations_item_view_chance_of_rain" />

            <TextView
                android:id="@+id/locations_item_view_chance_of_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_4"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/locations_item_view_humidity_icon"
                app:layout_constraintTop_toBottomOf="@id/locations_item_view_feels_like_temp"
                tools:text="52%" />


            <TextView
                android:id="@+id/locations_item_view_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/locations_item_view_current_temp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/toolbar_tashkent" />

            <ImageView
                android:id="@+id/locations_item_view_current_weather_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/current_weather_desc"
                android:padding="@dimen/grid_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_sunrise" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="138dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>